Project

General

Profile

Actions

Bug #21289

closed

Fix C level backtraces for USE_ELF

Bug #21289: Fix C level backtraces for USE_ELF

Added by dodecadaniel (Daniel Colson) over 1 year ago. Updated over 1 year ago.

Status:
Closed
Assignee:
-
Target version:
-
ruby -v:
ruby 3.4.3 (2025-04-14 revision d0b7e5b6a0) +PRISM [x86_64-linux]
[ruby-core:121754]

Description

After upgrading GitHub to Ruby 3.4 we noticed that we stopped getting useful C level backtrace information in our crash reports. We traced it back to https://github.com/ruby/ruby/commit/7dd2afbe3a14d021e5554288517709f5778c3d58.

Passing 0 instead of -1 makes sense for the Mach-O version of fill_lines, but there is a separate ELF version of fill_lines that still has special handling for -1: https://github.com/ruby/ruby/blob/58e3aa02240a9ec1b5fe6ce60d63828c2cf0c73a/addr2line.c#L2178-L2209. More details in the corresponding PR: https://github.com/ruby/ruby/pull/13195

Actions

Also available in: PDF Atom